# bayesian-ab-testing

./: .gitignore  README.md  _quarto.yml  header_plot.py  index.ipynb  pyproject.toml
.github/workflows/: quarto-publish.yml
notebooks/: bayesian-ab-testing.ipynb  exploration.ipynb
scripts/: make_readme_figure.py
src/bayesian_ab/: __init__.py  frequentist.py  simulation.py
src/bayesian_ab/bayesian/: __init__.py  conjugate.py  metrics.py  models.py  plotting.py
tests/: test_bayesian.py  test_frequentist.py
