[project]
name = "bayesian-ab-testing"
version = "0.1.0"
description = "Bayesian Sequential A/B Testing Framework"
requires-python = ">=3.12"
dependencies = [
    "matplotlib>=3.10.8",
    "myplotlib",
    "numpy>=2.4.1",
    "pandas>=2.3.3",
    "scipy>=1.17.0",
    "seaborn>=0.13.2",
    "statsmodels>=0.14.6",
    "streamlit>=1.53.0",
]

[dependency-groups]
dev = [
    "ipython>=9.9.0",
    "jupyter>=1.1.1",
    "pytest>=9.0.2",
]

[tool.uv.sources]
myplotlib = { git = "https://github.com/moltaire/myplotlib", rev = "v0.1.0" }
